# trackit

./: AGENTS.md  Cargo.toml
api/: Cargo.toml  README.md
api/.openapi-generator/: FILES
api/docs/: AccessScope.md  ActivityCategory.md  ActivityCursorPage.md  ActivityItem.md  Agile.md  AgileColumn.md  AgileColumnFieldValue.md  AgileSharingSettings.md  AgileStatus.md  AllUsersGroup.md  AppearanceSettings.md  Article.md  ArticleAttachment.md  ArticleComment.md  AssignedRole.md  AttachmentActivityItem.md  AttributeBasedSwimlaneSettings.md  BackupError.md  BackupFile.md  BackupStatus.md  BaseArticle.md  BaseBundle.md  BaseWorkItem.md  BitBucketChangesProcessor.md  BitBucketServer.md  BitbucketStandaloneChangesProcessor.md  BitbucketStandaloneServer.md  BuildBundle.md  BuildBundleCustomFieldDefaults.md  BuildBundleElement.md  BuildProjectCustomField.md  Bundle.md  BundleCustomFieldDefaults.md  BundleElement.md  BundleProjectCustomField.md  ChangesProcessor.md  ColorCoding.md  ColumnSettings.md  CommandLimitedVisibility.md  CommandList.md  (+188 more)
api/src/apis/: configuration.rs  default_api.rs
api/src/models/: access_scope.rs  activity_category.rs  activity_cursor_page.rs  activity_item.rs  agile.rs  agile_column.rs  agile_column_field_value.rs  agile_sharing_settings.rs  agile_status.rs  all_users_group.rs  appearance_settings.rs  article.rs  article_attachment.rs  article_comment.rs  assigned_role.rs  attachment_activity_item.rs  attribute_based_swimlane_settings.rs  backup_error.rs  backup_file.rs  backup_status.rs  base_article.rs  base_bundle.rs  base_work_item.rs  bit_bucket_changes_processor.rs  bundle.rs  (+203 more)
(+28 files in other folders)
