[package]
name = "trackit"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "api" }
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
console = "0.15"
