[package]
name = "api"
version = "2026.2.0"
authors = ["OpenAPI Generator team and contributors"]
description = "YouTrack issue tracking and project management system"
license = "YouTrack license"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "stream", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
